syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/hvxahv/gateway.bac/api/channel/v1alpha";

service Administrative {
  // IsChannelAdministrator It is the admin that returns true not false.
  rpc IsChannelAdministrator(IsChannelAdministratorRequest) returns (IsChannelAdministratorResponse) {}
  rpc AddAdministrator(AddAdministratorRequest) returns (AddAdministratorResponse) {}
  rpc RemoveAdministrator(RemoveAdministratorRequest) returns (RemoveAdministratorResponse) {}
  rpc GetAdministrators(GetAdministratorsRequest) returns (GetAdministratorsResponse) {}
}

message IsChannelAdministratorRequest {
  string channel_id = 1;
  string admin_id = 2;
}

message IsChannelAdministratorResponse {
  bool is_administrator = 1;
}

message AddAdministratorRequest {
  // The channel id.
  string channel_id = 1;
  // ID of the channel owner.
  string admin_account_id = 2;
  // Added administrator ID.
  string add_admin_id = 3;
  bool is_owner = 4;
}

message AddAdministratorResponse {
  string code = 1;
  string reply = 2;
}

message RemoveAdministratorRequest {
  string owner_id = 1;
  string channel_id = 2;
  string remove_admin_id = 3;
}

message RemoveAdministratorResponse {
  string code = 1;
  string reply = 2;
}

message GetAdministratorsRequest {
  string channel_id = 1;
  string account_id = 2;
}

message GetAdministratorsResponse {
  string code = 1;
  repeated string administrators = 2;
}